# project-chimra-specs

./: .coderabbit.yaml  .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.cursor/: rules
.github/: pull_request_template.md
.github/workflows/: ci.yml
agents/: judge.py
docs/: GOVERNANCE.md
docs/adr/: 0001-nosql-for-polymorphic-data.md
research/: architecture_strategy.md  research_summary.md
skills/: README.md  skill_check_safety.py  skill_fetch_trends.py  skill_generate_script.py
skills/skill_check_safety/: README.md
skills/skill_fetch_trends/: README.md
skills/skill_generate_script/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md  ui_ux.md
tests/: test_judge_agent.py  test_safety_gate.py  test_script_generator.py  test_trend_fetcher.py
