[project]
name = "project-chimra-specs"
version = "0.1.0"
description = "Project Chimera: A Sovereign Agent Node with Governed Agency"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]